--- a/tos.html
+++ b/tos.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>Welcome to our Discord bot, Donnabelle ("the Bot"). By using the Bot, you agree to comply with and be bound by these terms and conditions of use.</p>
+            <p>Welcome to our Discord bot, Donnabelle#0411 ("the Bot"). By using the Bot, you agree to comply with and be bound by these terms and conditions of use.</p>
         </section>
         <section>
             <h2>2. License</h2>
@@ -45,7 +45,7 @@
         </section>
         <section>
             <h2>6. Governing Law</h2>
-            <p>These terms shall be governed by and construed in accordance with the laws of [Your Jurisdiction], without regard to its conflict of law provisions.</p>
+            <p>These terms shall be governed by and construed in accordance with the laws of Brazil, without regard to its conflict of law provisions.</p>
         </section>
         <section>
             <h2>7. Changes to Terms</h2>
@@ -53,7 +53,7 @@
         </section>
         <section>
             <h2>8. Contact Us</h2>
-            <p>If you have any questions about these terms, please contact us at [Your Contact Information].</p>
+            <p>If you have any questions about these terms, please contact us at devlux in discord.</p>
         </section>
     </main>
 </body>
