--- a/policy.html
+++ b/policy.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>Welcome to Donquixote Bot's Privacy Policy. This policy explains how we collect, use, and disclose information about you when you use our Discord bot, Donnabelle ("the Bot").</p>
+            <p>Welcome to Donquixote Bot's Privacy Policy. This policy explains how we collect, use, and disclose information about you when you use our Discord bot, Donnabelle#0411 ("the Bot").</p>
         </section>
         <section>
             <h2>2. Information We Collect</h2>
@@ -49,7 +49,7 @@
         </section>
         <section>
             <h2>7. Contact Us</h2>
-            <p>If you have any questions about this Privacy Policy, please contact us at [Your Contact Information].</p>
+            <p>If you have any questions about this Privacy Policy, please contact us at devlux on discord.</p>
         </section>
     </main>
 </body>
