--- a/tos.html
+++ b/tos.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>Welcome to our Discord bot, Donnabelle#0411 ("the Bot"). By using the Bot, you agree to comply with and be bound by these terms and conditions of use.</p>
+            <p>Welcome to our Discord bot, Donnabelle#0411 ("the Bot"). By joining server if the bot, you agree to comply with and be bound by these terms and conditions of use.</p>
         </section>
         <section>
             <h2>2. License</h2>
