--- a/tos.html
+++ b/tos.html
@@ -25,11 +25,11 @@
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>Welcome to our Discord bot, Donnabelle#0411 ("the Bot"). By joining server if the bot, you agree to comply with and be bound by these terms and conditions of use.</p>
+            <p>Welcome to our Discord bot, Donnabelle#0411 ("the Bot") TOS. By joining server if the bot, using the bot or being inspired by the bot, you agree to comply with and be bound by these terms and conditions of use.</p>
         </section>
         <section>
             <h2>2. License</h2>
-            <p>The Bot is licensed, not sold, to you for use only under the terms of this license. We reserve all rights not expressly granted to you.</p>
+            <p>The Bot is licensed, not sold, to you for use only under the terms of this license. We reserve all rights not expressly granted to you, by having the bot licensed to you you will follow a extra TOS giving by the developer.</p>
         </section>
         <section>
             <h2>3. Restrictions</h2>
