--- a/tos.html
+++ b/tos.html
@@ -36,23 +36,27 @@
             <p>You may not modify, adapt, translate, reverse engineer, decompile, disassemble, or create derivative works based on the Bot.</p>
         </section>
         <section>
-            <h2>4. Disclaimer</h2>
+        <h2>4. Intellectual Property</h2>
+        <p>All content and materials on our website/bot, including but not limited to text, images, and logos, are owned by devlux or its licensors and are protected by copyright, trademark, and other intellectual property laws.</p>
+         </section> 
+        <section>
+            <h2>5. Disclaimer</h2>
             <p>The Bot is provided "as is," without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose, and non-infringement.</p>
         </section>
         <section>
-            <h2>5. Limitation of Liability</h2>
+            <h2>6. Limitation of Liability</h2>
             <p>In no event shall we be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses.</p>
         </section>
         <section>
-            <h2>6. Governing Law</h2>
+            <h2>7. Governing Law</h2>
             <p>These terms shall be governed by and construed in accordance with the laws of Brazil, without regard to its conflict of law provisions.</p>
         </section>
         <section>
-            <h2>7. Changes to Terms</h2>
+            <h2>8. Changes to Terms</h2>
             <p>We reserve the right, at our sole discretion, to modify or replace these terms at any time. It is your responsibility to check these terms periodically for changes.</p>
         </section>
         <section>
-            <h2>8. Contact Us</h2>
+            <h2>9. Contact Us</h2>
             <p>If you have any questions about these terms, please contact us at devlux in discord.</p>
         </section>
     </main>
